simplidc_service.yml
apiVersion: v1
kind: Service
metadata:
  name: simplidc-service
spec:
  selector:
    app: neo4j
  ports:
    - name: app
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: neo4j
      protocol: TCP
      port: 7474
      targetPort: 7474
    - name: bolt
      protocol: TCP
      port: 7687
      targetPort: 7687
