simplidc_route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplidc-ingress
  annotations:
    simplidc.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
